--- a/FinalProject_MADTPEEPS_iOS/FinalProject_MADTPEEPS_iOS/View/Base.lproj/Main.storyboard
+++ b/FinalProject_MADTPEEPS_iOS/FinalProject_MADTPEEPS_iOS/View/Base.lproj/Main.storyboard
@@ -57,6 +57,7 @@
                     <toolbarItems>
                         <barButtonItem style="plain" systemItem="flexibleSpace" id="2dI-kB-WWD"/>
                         <barButtonItem title="New Folder" image="folder.badge.plus.fill" catalog="system" id="akd-k4-5HI">
+                            <color key="tintColor" systemColor="systemBrownColor"/>
                             <connections>
                                 <action selector="addCategoriesClick:" destination="eyB-gK-EqF" id="tx5-B4-ev1"/>
                             </connections>
@@ -208,14 +209,26 @@
                                                             </textField>
                                                         </subviews>
                                                     </stackView>
-                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Task Images:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jkg-R7-nD8">
+                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Due at:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jWD-vD-84e">
                                                         <rect key="frame" x="0.0" y="57.5" width="382" height="20.5"/>
                                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                         <nil key="textColor"/>
                                                         <nil key="highlightedColor"/>
                                                     </label>
+                                                    <datePicker contentMode="scaleToFill" contentHorizontalAlignment="leading" contentVerticalAlignment="top" datePickerMode="dateAndTime" minuteInterval="1" style="wheels" translatesAutoresizingMaskIntoConstraints="NO" id="5t2-MX-LcP">
+                                                        <rect key="frame" x="0.0" y="98" width="382" height="60"/>
+                                                        <constraints>
+                                                            <constraint firstAttribute="height" constant="60" id="W8i-IP-rYQ"/>
+                                                        </constraints>
+                                                    </datePicker>
+                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Task Images:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jkg-R7-nD8">
+                                                        <rect key="frame" x="0.0" y="178" width="382" height="20.5"/>
+                                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                        <nil key="textColor"/>
+                                                        <nil key="highlightedColor"/>
+                                                    </label>
                                                     <collectionView multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="pvI-zV-MTZ">
-                                                        <rect key="frame" x="0.0" y="98" width="382" height="100"/>
+                                                        <rect key="frame" x="0.0" y="218.5" width="382" height="100"/>
                                                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                                         <constraints>
                                                             <constraint firstAttribute="height" constant="100" id="oy0-Cs-t3M"/>
@@ -275,7 +288,7 @@
                                                         </cells>
                                                     </collectionView>
                                                     <stackView opaque="NO" contentMode="scaleToFill" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="qiV-iU-xC8">
-                                                        <rect key="frame" x="0.0" y="218" width="382" height="42"/>
+                                                        <rect key="frame" x="0.0" y="338.5" width="382" height="42"/>
                                                         <subviews>
                                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Audio" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Lql-dK-qzO">
                                                                 <rect key="frame" x="0.0" y="0.0" width="320" height="42"/>
@@ -290,7 +303,9 @@
                                                                 </constraints>
                                                                 <color key="tintColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                                 <state key="normal" title="Button"/>
-                                                                <buttonConfiguration key="configuration" style="filled" image="plus" catalog="system"/>
+                                                                <buttonConfiguration key="configuration" style="filled" image="plus" catalog="system">
+                                                                    <color key="baseBackgroundColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                                </buttonConfiguration>
                                                                 <connections>
                                                                     <action selector="addAudio:" destination="OeV-gr-Q8d" eventType="touchUpInside" id="egG-10-UDi"/>
                                                                 </connections>
@@ -301,7 +316,7 @@
                                                         </constraints>
                                                     </stackView>
                                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="dp5-Nb-roW">
-                                                        <rect key="frame" x="0.0" y="280" width="382" height="31"/>
+                                                        <rect key="frame" x="0.0" y="400.5" width="382" height="31"/>
                                                         <subviews>
                                                             <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" alignment="center" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="xgj-cS-wGs">
                                                                 <rect key="frame" x="0.0" y="0.0" width="382" height="31"/>
@@ -352,7 +367,7 @@
                                                         </subviews>
                                                     </stackView>
                                                     <stackView opaque="NO" contentMode="scaleToFill" distribution="equalCentering" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="loJ-WC-Ofq">
-                                                        <rect key="frame" x="0.0" y="331" width="382" height="44"/>
+                                                        <rect key="frame" x="0.0" y="451.5" width="382" height="44"/>
                                                         <subviews>
                                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Audio Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="I3g-7C-KhQ">
                                                                 <rect key="frame" x="0.0" y="0.0" width="93" height="44"/>
@@ -393,18 +408,6 @@
                                                             </stackView>
                                                         </subviews>
                                                     </stackView>
-                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Due at:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jWD-vD-84e">
-                                                        <rect key="frame" x="0.0" y="395" width="382" height="20.5"/>
-                                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                        <nil key="textColor"/>
-                                                        <nil key="highlightedColor"/>
-                                                    </label>
-                                                    <datePicker contentMode="scaleToFill" contentHorizontalAlignment="leading" contentVerticalAlignment="top" datePickerMode="dateAndTime" minuteInterval="1" style="wheels" translatesAutoresizingMaskIntoConstraints="NO" id="5t2-MX-LcP">
-                                                        <rect key="frame" x="0.0" y="435.5" width="382" height="60"/>
-                                                        <constraints>
-                                                            <constraint firstAttribute="height" constant="60" id="W8i-IP-rYQ"/>
-                                                        </constraints>
-                                                    </datePicker>
                                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="equalCentering" alignment="center" spacing="50" translatesAutoresizingMaskIntoConstraints="NO" id="udd-ag-Qb9">
                                                         <rect key="frame" x="0.0" y="515.5" width="382" height="40"/>
                                                         <subviews>
@@ -420,6 +423,7 @@
                                                                 <state key="normal" title="Add Task"/>
                                                                 <buttonConfiguration key="configuration" style="tinted" title="Create">
                                                                     <fontDescription key="titleFontDescription" name="KohinoorBangla-Regular" family="Kohinoor Bangla" pointSize="18"/>
+                                                                    <color key="baseBackgroundColor" systemColor="systemBrownColor"/>
                                                                 </buttonConfiguration>
                                                                 <connections>
                                                                     <action selector="createButtonHandler:" destination="OeV-gr-Q8d" eventType="touchUpInside" id="Uaa-5p-2qR"/>
