--- a/FinalProject_MADTPEEPS_iOS/FinalProject_MADTPEEPS_iOS/View/Base.lproj/Main.storyboard
+++ b/FinalProject_MADTPEEPS_iOS/FinalProject_MADTPEEPS_iOS/View/Base.lproj/Main.storyboard
@@ -182,25 +182,25 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="k14-zk-Hjg">
-                                <rect key="frame" x="0.0" y="88" width="414" height="587.5"/>
+                                <rect key="frame" x="0.0" y="88" width="414" height="618"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="khB-0I-Qyc">
-                                        <rect key="frame" x="0.0" y="0.0" width="414" height="587.5"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="414" height="618"/>
                                         <subviews>
                                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="ygW-aW-st2">
-                                                <rect key="frame" x="16" y="16" width="382" height="555.5"/>
+                                                <rect key="frame" x="16" y="16" width="382" height="586"/>
                                                 <subviews>
-                                                    <stackView opaque="NO" contentMode="scaleToFill" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="3Dl-bk-llM">
-                                                        <rect key="frame" x="0.0" y="0.0" width="382" height="37.5"/>
+                                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="3Dl-bk-llM">
+                                                        <rect key="frame" x="0.0" y="0.0" width="382" height="68"/>
                                                         <subviews>
                                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name: " textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oSA-M8-S4I">
-                                                                <rect key="frame" x="0.0" y="0.0" width="54" height="37.5"/>
+                                                                <rect key="frame" x="0.0" y="0.0" width="382" height="20.5"/>
                                                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                                 <nil key="textColor"/>
                                                                 <nil key="highlightedColor"/>
                                                             </label>
                                                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter task tittle here" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="ajY-ab-XvW">
-                                                                <rect key="frame" x="64" y="0.0" width="318" height="37.5"/>
+                                                                <rect key="frame" x="0.0" y="30.5" width="382" height="37.5"/>
                                                                 <constraints>
                                                                     <constraint firstAttribute="height" constant="37.5" id="xg2-P0-7oQ"/>
                                                                 </constraints>
@@ -210,25 +210,25 @@
                                                         </subviews>
                                                     </stackView>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Due at:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jWD-vD-84e">
-                                                        <rect key="frame" x="0.0" y="57.5" width="382" height="20.5"/>
+                                                        <rect key="frame" x="0.0" y="88" width="382" height="20.5"/>
                                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                         <nil key="textColor"/>
                                                         <nil key="highlightedColor"/>
                                                     </label>
                                                     <datePicker contentMode="scaleToFill" contentHorizontalAlignment="leading" contentVerticalAlignment="top" datePickerMode="dateAndTime" minuteInterval="1" style="wheels" translatesAutoresizingMaskIntoConstraints="NO" id="5t2-MX-LcP">
-                                                        <rect key="frame" x="0.0" y="98" width="382" height="60"/>
+                                                        <rect key="frame" x="0.0" y="128.5" width="382" height="60"/>
                                                         <constraints>
                                                             <constraint firstAttribute="height" constant="60" id="W8i-IP-rYQ"/>
                                                         </constraints>
                                                     </datePicker>
-                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Task Images:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jkg-R7-nD8">
-                                                        <rect key="frame" x="0.0" y="178" width="382" height="20.5"/>
+                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Add Photos for task:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jkg-R7-nD8">
+                                                        <rect key="frame" x="0.0" y="208.5" width="382" height="20.5"/>
                                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                         <nil key="textColor"/>
                                                         <nil key="highlightedColor"/>
                                                     </label>
                                                     <collectionView multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="pvI-zV-MTZ">
-                                                        <rect key="frame" x="0.0" y="218.5" width="382" height="100"/>
+                                                        <rect key="frame" x="0.0" y="249" width="382" height="100"/>
                                                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                                         <constraints>
                                                             <constraint firstAttribute="height" constant="100" id="oy0-Cs-t3M"/>
@@ -247,8 +247,8 @@
                                                                     <rect key="frame" x="0.0" y="0.0" width="85" height="79"/>
                                                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                                     <subviews>
-                                                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="plus" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="kI6-cC-Ivm">
-                                                                            <rect key="frame" x="0.0" y="2" width="85" height="75"/>
+                                                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="plus.rectangle.fill.on.folder.fill" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="kI6-cC-Ivm">
+                                                                            <rect key="frame" x="0.0" y="0.0" width="86.5" height="77.5"/>
                                                                             <color key="backgroundColor" white="0.95341267620000003" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                                             <color key="tintColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                                         </imageView>
@@ -288,22 +288,22 @@
                                                         </cells>
                                                     </collectionView>
                                                     <stackView opaque="NO" contentMode="scaleToFill" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="qiV-iU-xC8">
-                                                        <rect key="frame" x="0.0" y="338.5" width="382" height="42"/>
+                                                        <rect key="frame" x="0.0" y="369" width="382" height="42"/>
                                                         <subviews>
                                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Audio" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Lql-dK-qzO">
-                                                                <rect key="frame" x="0.0" y="0.0" width="320" height="42"/>
+                                                                <rect key="frame" x="0.0" y="0.0" width="236" height="42"/>
                                                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                                 <nil key="textColor"/>
                                                                 <nil key="highlightedColor"/>
                                                             </label>
                                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="KFl-hC-uoX">
-                                                                <rect key="frame" x="340" y="0.0" width="42" height="42"/>
+                                                                <rect key="frame" x="256" y="0.0" width="126" height="42"/>
                                                                 <constraints>
-                                                                    <constraint firstAttribute="width" secondItem="KFl-hC-uoX" secondAttribute="height" multiplier="1:1" id="kJK-0C-3TG"/>
+                                                                    <constraint firstAttribute="width" secondItem="KFl-hC-uoX" secondAttribute="height" multiplier="3:1" id="kJK-0C-3TG"/>
                                                                 </constraints>
                                                                 <color key="tintColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                                 <state key="normal" title="Button"/>
-                                                                <buttonConfiguration key="configuration" style="filled" image="plus" catalog="system">
+                                                                <buttonConfiguration key="configuration" style="filled" title="Add Audio">
                                                                     <color key="baseBackgroundColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                                 </buttonConfiguration>
                                                                 <connections>
@@ -316,7 +316,7 @@
                                                         </constraints>
                                                     </stackView>
                                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="dp5-Nb-roW">
-                                                        <rect key="frame" x="0.0" y="400.5" width="382" height="31"/>
+                                                        <rect key="frame" x="0.0" y="431" width="382" height="31"/>
                                                         <subviews>
                                                             <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" alignment="center" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="xgj-cS-wGs">
                                                                 <rect key="frame" x="0.0" y="0.0" width="382" height="31"/>
@@ -367,7 +367,7 @@
                                                         </subviews>
                                                     </stackView>
                                                     <stackView opaque="NO" contentMode="scaleToFill" distribution="equalCentering" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="loJ-WC-Ofq">
-                                                        <rect key="frame" x="0.0" y="451.5" width="382" height="44"/>
+                                                        <rect key="frame" x="0.0" y="482" width="382" height="44"/>
                                                         <subviews>
                                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Audio Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="I3g-7C-KhQ">
                                                                 <rect key="frame" x="0.0" y="0.0" width="93" height="44"/>
@@ -409,7 +409,7 @@
                                                         </subviews>
                                                     </stackView>
                                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="equalCentering" alignment="center" spacing="50" translatesAutoresizingMaskIntoConstraints="NO" id="udd-ag-Qb9">
-                                                        <rect key="frame" x="0.0" y="515.5" width="382" height="40"/>
+                                                        <rect key="frame" x="0.0" y="546" width="382" height="40"/>
                                                         <subviews>
                                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="aHx-Zt-0Xm">
                                                                 <rect key="frame" x="131" y="0.0" width="120" height="40"/>
@@ -490,7 +490,7 @@
         <image name="folder.badge.plus.fill" catalog="system" width="128" height="91"/>
         <image name="list.number.rtl" catalog="system" width="128" height="97"/>
         <image name="play.fill" catalog="system" width="116" height="128"/>
-        <image name="plus" catalog="system" width="128" height="113"/>
+        <image name="plus.rectangle.fill.on.folder.fill" catalog="system" width="128" height="96"/>
         <image name="recordingtape" catalog="system" width="128" height="59"/>
         <image name="stop.circle" catalog="system" width="128" height="121"/>
         <image name="trash.fill" catalog="system" width="121" height="128"/>
